--- a/lib/pubspec.yaml
+++ b/lib/pubspec.yaml
@@ -40,10 +40,15 @@ dependencies:
   provider: ^6.0.3
   cached_network_image: ^3.2.0
   flutter_rating_bar: ^4.0.1
+  maps_launcher: ^2.0.1
+  # google_mobile_ads: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  change_app_package_name: ^1.1.0
+  flutter_native_splash: ^2.2.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -91,3 +96,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#000000"
+  image: assets/icons/logo.png
