--- a/lib/pubspec.yaml
+++ b/lib/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   geolocator: ^9.0.1
   location: ^4.4.0
   fluttertoast: ^8.0.9
-  google_place: ^0.4.7
   provider: ^6.0.3
   cached_network_image: ^3.2.0
   flutter_rating_bar: ^4.0.1
   maps_launcher: ^2.0.1
+  package_info_plus: ^1.4.3+1
   # google_mobile_ads: ^1.3.0
 
 dev_dependencies:
@@ -105,5 +105,6 @@ flutter_native_splash:
 flutter_icons:
   android: true
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/icons/logo.png"
-  adaptive_icon_background: "#242424"
+  adaptive_icon_background: "#ffffff"
