--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -36,15 +36,20 @@ dependencies:
   geolocator: ^9.0.1
   location: ^4.4.0
   fluttertoast: ^8.0.9
-  google_place: ^0.4.7
   provider: ^6.0.3
   cached_network_image: ^3.2.0
   flutter_rating_bar: ^4.0.1
   maps_launcher: ^2.0.1
+  package_info_plus: ^1.4.3+1
+  # google_mobile_ads: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  change_app_package_name: ^1.1.0
+  flutter_native_splash: ^2.2.7
+  flutter_launcher_icons: ^0.10.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -92,3 +97,14 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#242424"
+  image: assets/icons/logo.png
+
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/logo.png"
+  adaptive_icon_background: "#ffffff"
